# omnax

./: README.md  pyproject.toml
src/omnax/: __init__.py  dataset.py  tokenizer.py  utils.py
src/omnax/models/: __init__.py  transformer.py
src/omnax/nn/: __init__.py
src/omnax/trainer/: config.py
src/omnax/trainer/pretrain/: train.py
tests/: test_nn.py
