[project]
name = "omnax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pume Tuchinda", email = "pumetuchinda@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jax[cuda13]>=0.7.2",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
