[project]
name = "omnax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pume Tuchinda", email = "pumetuchinda@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "jax[cuda13]>=0.7.2",
    "jaxtyping>=0.3.3",
    "optax>=0.2.6",
    "tokenizers>=0.22.1",
    "tyro>=0.9.35",
    "wandb>=0.23.0",
]

[project.scripts]
pretrain = "omnax.trainer.pretrain.train:main"
sft = "omnax.trainer.pretrain.train:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E731", "F722", "F823"]

[dependency-groups]
dev = [
    "flax>=0.12.0",
    "pytest>=8.4.2",
]
